@@ -1,7 +1,8 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = spellchecker/spell.cpp spellchecker/suggestions.cpp voikko_utils.c voikko_setup.c \
                        hyphenator/hyphenator.cpp voikko_charset.c \
-                       voikko_tokenize.c sentence/sentence.cpp grammar/grammar.cpp gccache.c \
+                       tokenizer/tokenizer.cpp sentence/sentence.cpp \
+                       grammar/grammar.cpp gccache.c \
                        gcerror.c gcanalysis.c
 libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 9:0:8 @LIBLDFLAGSWIN@
 
